<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:foregroundTint="#FFFFFF">


    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="396dp"
        android:layout_height="159dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iv_home_page_image" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="403dp"
        android:layout_height="57dp"
        android:layout_marginTop="104dp"
        app:layout_constraintBottom_toTopOf="@+id/rv_search_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iv_home_page_rectangle2" />



    <ImageView
        android:id="@+id/iv_home_page_rectangle4"
        android:layout_width="360dp"
        android:layout_height="63dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/iv_home_page_rectangle4"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_search"
        android:layout_width="202dp"
        android:layout_height="49dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="92dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:hint="Search for Recipes"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton

        android:id="@+id/btn_search"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/image_state_layer2"
        android:contentDescription="Search Button"
        app:layout_constraintBottom_toBottomOf="@+id/iv_home_page_rectangle4"
        app:layout_constraintEnd_toEndOf="@+id/iv_home_page_rectangle4"
        app:layout_constraintTop_toTopOf="@+id/iv_home_page_rectangle4"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_results"
        android:layout_width="393dp"
        android:layout_height="571dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:backgroundTint="#FFFFFF"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav" />

    <!-- Scrollable Filter Section (Initially Hidden) -->

    <ImageButton
        android:id="@+id/btn_show_filters"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/image_state_layer"
        android:contentDescription="Filter Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ScrollView
        android:id="@+id/filterScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#D5000000"
        android:translationY="-50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rv_search_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomNavigationView"
        app:layout_constraintTop_toTopOf="parent">

        <!-- ScrollView content -->
        <LinearLayout
            android:id="@+id/filterSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Calories Filter Section -->
            <TextView
                android:id="@+id/filterLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Apply a filter"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="Calories"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioCalories500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="500&lt;"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioCalories1000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1000&lt;"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioCalories1500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1500&lt;"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioCalories2000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2000&lt;"
                    android:textColor="#FFFFFF" />
            </RadioGroup>

            <!-- Type of Meal Filter -->
            <TextView
                android:id="@+id/txtMeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:text="Type of meal"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupMealType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioBreakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Breakfast"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioLunch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lunch"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioDinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dinner"
                    android:textColor="#FFFFFF" />
            </RadioGroup>

            <!-- Main Ingredient Filter -->
            <TextView
                android:id="@+id/txtMainIngredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:text="Main ingredient"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioChicken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chicken"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioBeef"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Beef"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioFish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fish"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioFlour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Flour"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioEggs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Eggs"
                    android:textColor="#FFFFFF" />
            </RadioGroup>

            <!-- Clear Filters Button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_clear_filters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Clear Filters" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>